Added activation commands, added support for specifying python path, changed commands to be python editor specific

--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "isort",
     "formatting",
     "productivity"
-  ]
+  ],
+  "activationCommands": {
+    "atom-text-editor[data-grammar=\"source python\"]": "atom-isort:sortImports",
+    "atom-text-editor[data-grammar=\"source python\"]": "atom-isort:checkImports"
+  }
 }
