--- a/circle.yml
+++ b/circle.yml
@@ -2,11 +2,9 @@ machine:
   environment:
     ATOM_LINT_WITH_BUNDLED_NODE: "true"
     APM_TEST_PACKAGES: ""
+    ATOM_CHANNEL: "stable"
 
 dependencies:
-  pre:
-    - pip install isort
-
   override:
     - curl -s -O https://raw.githubusercontent.com/atom/ci/master/build-package.sh
     - chmod u+x build-package.sh
@@ -14,3 +12,5 @@ dependencies:
 test:
   override:
     - ./build-package.sh
+    # On MacOS:
+    # - caffeinate -s build-package.sh
