--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "atom-isort",
-  "main": "./index",
+  "main": "./lib/index",
   "version": "2.5.0",
   "description": "Organize python imports using isort",
   "repository": "https://github.com/lexicalunit/atom-isort",
@@ -9,7 +9,7 @@
     "atom": ">=1.4.0 <2.0.0"
   },
   "package-deps": [
-    "linter"
+    "linter:2.0.0"
   ],
   "providedServices": {
     "linter": {
@@ -19,17 +19,19 @@
     }
   },
   "dependencies": {
-    "atom-package-deps": "^4.2.0"
+    "atom-linter": "^10.0.0",
+    "atom-package-deps": "^4.6.0"
   },
   "keywords": [
     "python",
     "style",
     "isort",
     "formatting",
-    "productivity"
+    "productivity",
+    "linter"
   ],
   "devDependencies": {
-    "eslint": "^4.3.0",
+    "eslint": "^4.5.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.1.1",
